fix: items alignment

--- a/src/app/calendar/calendar.component.css
+++ b/src/app/calendar/calendar.component.css
@@ -9,19 +9,23 @@
   background-color: #2a2a2a;
 }
 
+
 .date-section {
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
 
+
 .date-label {
   font-size: 1.2em;
   font-weight: bold;
-  /* Aumenta o peso da fonte */
   color: #1ed760;
-  /* Verde claro do Spotify */
   margin-right: 20px;
+  min-width: 60px;
+  /* Defina uma largura mínima adequada para a data */
+  /* Alinha o texto à direita para manter a consistência */
+  text-align: right;
 }
 
 .habit-button {
@@ -52,6 +56,5 @@
 }
 
 .today {
-  /* Uma cor verde mais clara, semelhante ao Spotify */
   background-color: #3a85b3;
 }
